--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   json_serializable: ^6.9.5
   pretty_dio_logger: ^1.4.0
   dio: ^5.8.0+1
+  shared_preferences: ^2.5.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
