add language and theme providers with change management

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   dio: ^5.8.0+1
   shared_preferences: ^2.5.3
+  provider: ^6.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
