--- a/linux/.gitignore
+++ b/linux/.gitignore
@@ -1,1 +1,76 @@
 flutter/ephemeral
+# -------------------------
+# Dart & Flutter
+# -------------------------
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+build/
+generated_plugin_registrant.dart
+
+# IDE files
+.vscode/
+.idea/
+*.iml
+
+# -------------------------
+# C/C++ & Swift Generated
+# -------------------------
+
+# Xcode (Swift/Objective-C)
+ios/Flutter/App.framework
+ios/Flutter/Flutter.framework
+ios/Flutter/Flutter.podspec
+ios/Pods/
+ios/.symlinks/
+ios/Runner.xcworkspace/
+ios/DerivedData/
+ios/build/
+
+# C/C++ common
+*.o
+*.obj
+*.so
+*.dll
+*.a
+*.lib
+*.exe
+*.out
+*.dSYM/
+*.d
+
+# -------------------------
+# Android (Java/Kotlin/NDK)
+# -------------------------
+android/.gradle/
+android/build/
+android/local.properties
+*.keystore
+
+# Gradle
+.gradle/
+**/build/
+
+# Kotlin/Java
+*.class
+
+# NDK / JNI / Native code
+*.h
+*.cpp
+*.cc
+*.c
+*.jar
+*.jni
+*.mk
+
+# -------------------------
+# Other Common
+# -------------------------
+*.log
+*.tmp
+*.swp
+*.lock
+.DS_Store
