--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   dio: ^5.8.0+1
   shared_preferences: ^2.5.3
   provider: ^6.1.5
+  flutter_localization: ^0.3.0
+  cached_network_image:
+  intl: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -67,7 +70,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
