--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cached_network_image:
   intl: any
   easy_sidemenu: ^0.7.1
+  dotted_border: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
