--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   intl: any
   easy_sidemenu: ^0.7.1
   dotted_border: ^2.1.0
+  file_picker: ^10.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
